--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <svg viewBox="0 0 100 100">
+    <!-- <svg viewBox="0 0 100 100">
         <use xlink:href="35.svg#Capa_1"></use>
-     </svg>
+     </svg> -->
 
 
     <!-- <img src="35.svg" /> -->
