--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        html{
+            font-family: FSAlbertNarrow;
+        }
+    </style>
 </head>
 <body>
     <!-- <svg viewBox="0 0 100 100">
@@ -13,7 +18,9 @@
 
     <!-- <img src="35.svg" /> -->
 
-    <canvas width="400" height="400" id="canvas"></canvas>
+    <!-- <input type="file" id="input"> -->
+
+    <!-- <canvas width="400" height="400" id="canvas"></canvas> -->
 
     <script src="main.js" ></script>
 </body>
