--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
 
     <!-- <canvas width="400" height="400" id="canvas"></canvas> -->
 
-    <script src="main.js" ></script>
+    <script src="https://cdn.jsdelivr.net/gh/jaya-company/curstom-graph-generator/src/main.js"></script>
+    <script>
+        console.log(getGraph)
+    </script>
 </body>
 </html>
