font forced to load

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <style>
+        @font-face {
+            font-family: "blissi";
+            src: url("https://jaya-company.github.io/curstom-graph-generator/src/fonts/FSAlbertProNarrow-Bold.otf");
+            /* local: ("Libre Baskerville"); */
+            /* src: url("fonts/FSAlbertProNarrow-Bold.otf") */
+}           
+        </style> -->
 </head>
 <body>
-    <!-- <script src="https://cdn.jsdelivr.net/gh/jaya-company/curstom-graph-generator/src/main.js"></script> -->
-    <script src="main.js">
-
-    </script>
+    <h2 style="font-family: 'blissi';" >Mijito!</h2>
+    <script src="https://cdn.jsdelivr.net/gh/jaya-company/curstom-graph-generator/src/v1.1.js"></script>
+    <!-- <script src="main.js"></script> -->
     <script>
         console.log(getGraph)
         getGraph(55)
