--- a/src/index.html
+++ b/src/index.html
@@ -14,17 +14,54 @@
         </style> -->
 </head>
 <body>
+
+    <img width="200" id="img1" /> 
+    <img id="img20" width="200"/> 
+    <img id="img30" width="200"/> 
+    <img id="img40" width="200"/> 
+    <img id="img50" width="200"/> 
+    <img id="img60" width="200"/> 
+    <img id="img70" width="200"/> 
+    <img id="img80" width="200"/> 
+    <img id="img90" width="200"/> 
+    <img id="img10" width="200"/> 
+    <img id="img100" width="200"/> 
+
     <h2 style="font-family: 'blissi';" >Mijito!</h2>
-    <script src="https://cdn.jsdelivr.net/gh/jaya-company/curstom-graph-generator/src/v1.1.js"></script>
-    <!-- <script src="main.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/gh/jaya-company/curstom-graph-generator/src/v1.3.js"></script> -->
+    <script src="main.js"></script>
     <script>
-        console.log(getGraph)
-        getGraph(55)
+        getGraph(1)
         .then(url=>{
-            let img = document.createElement('img')
+            let img = document.getElementById('img1')
             img.src = url
-            document.body.appendChild(img)
         })
+        getGraph(10)
+        .then(url=>{
+            let img = document.getElementById('img10')
+            img.src = url
+        })
+        getGraph(20)
+        .then(url=>{
+            let img = document.getElementById('img20')
+            img.src = url
+        })
+        getGraph(30)
+        .then(url=>{
+            let img = document.getElementById('img30')
+            img.src = url
+        })
+        getGraph(40)
+        .then(url=>{
+            let img = document.getElementById('img40')
+            img.src = url
+        })
+        getGraph(50)
+        .then(url=>{
+            let img = document.getElementById('img50')
+            img.src = url
+        })
+
     </script>
 </body>
 </html>
