--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,8 @@
     <img id="img100" width="200"/> 
 
     <h2 style="font-family: 'blissi';" >Mijito!</h2>
-    <!-- <script src="https://cdn.jsdelivr.net/gh/jaya-company/curstom-graph-generator/src/v1.3.js"></script> -->
-    <script src="main.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/jaya-company/curstom-graph-generator/src/v1.4.js"></script>
+    <!-- <script src="main.js"></script> -->
     <script>
         getGraph(1)
         .then(url=>{
