--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,14 @@
 
 // esto es un test
 
+const assert = require("assert");
+describe("Git bisect demo", function() {
+    describe("#foo()", function() {
+        it("should not do anything", function() {
+            assert(true);
+        });
+    });
+});
 
 </body>
 </html>
